Upgrade from rails 4.2 to rails 5.2

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 development:
   adapter: postgresql
   database: maily_testapp
-  host: localhost
-  username: maily_testapp
-  password: maily_testapp
+  # host: localhost
+  # username: maily_testapp
+  # password: maily_testapp
   encoding: utf8
